// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DG BUDG CSV transformer Produces correct JSON output structure 1`] = `
Object {
  "agriet": Object {
    "eu_contrib": 3562000,
    "funding_area": null,
    "other_contrib": null,
    "private_fund": null,
    "public_fund": null,
    "total_cost": null,
  },
  "coordinators": Array [
    Object {
      "address": null,
      "country": null,
      "email": null,
      "name": "Eva Maria Plunger (VERBUND AG)",
      "phone": null,
      "region": null,
      "type": null,
      "website": null,
    },
  ],
  "cover_image": "https://ec.europa.eu/agriet/euprojects/sites/euprojects/files/at_cegc_985x270_0.jpg",
  "description": "<p>Under the EU-funded Central European Green Corridors project, 115 fast-charging stations for electric cars have opened in Germany, Austria, Slovenia, Slovakia and Croatia – allowing cross-border electromobility with your e-car between Munich and Zagreb. Further network expansion, offers and services for customers and energy supply solutions also drive the project’s roll-out of electric transport. Partners include public sector bodies and private companies.</p>",
  "ec_priorities": Array [
    "Jobs, Growth and Investment",
  ],
  "partners": Array [
    Object {
      "address": null,
      "country": null,
      "name": "Bayern Innovativ",
      "region": null,
      "type": null,
      "website": null,
    },
    Object {
      "address": null,
      "country": null,
      "name": " BMW",
      "region": null,
      "type": null,
      "website": null,
    },
    Object {
      "address": null,
      "country": null,
      "name": " Nissan",
      "region": null,
      "type": null,
      "website": null,
    },
    Object {
      "address": null,
      "country": null,
      "name": " Renault",
      "region": null,
      "type": null,
      "website": null,
    },
    Object {
      "address": null,
      "country": null,
      "name": " Volkswagen",
      "region": null,
      "type": null,
      "website": null,
    },
    Object {
      "address": null,
      "country": null,
      "name": " Republic of Slovenia",
      "region": null,
      "type": null,
      "website": null,
    },
    Object {
      "address": null,
      "country": null,
      "name": " ZSE",
      "region": null,
      "type": null,
      "website": null,
    },
    Object {
      "address": null,
      "country": null,
      "name": " Schrack Technik",
      "region": null,
      "type": null,
      "website": null,
    },
    Object {
      "address": null,
      "country": null,
      "name": " GreenWay",
      "region": null,
      "type": null,
      "website": null,
    },
    Object {
      "address": null,
      "country": null,
      "name": " City of Zagreb",
      "region": null,
      "type": null,
      "website": null,
    },
    Object {
      "address": null,
      "country": null,
      "name": " SMATRICS",
      "region": null,
      "type": null,
      "website": null,
    },
  ],
  "programme_name": "Connecting Europe Facility",
  "project_id": "8155",
  "project_locations": Array [
    Object {
      "country_code": "AT",
      "country_name": null,
      "location": Object {
        "lat": "48.211312000000",
        "lon": "16.367315000000",
      },
    },
    Object {
      "country_code": "HR",
      "country_name": null,
      "location": Object {
        "lat": "45.803508000000",
        "lon": "16.017459000000",
      },
    },
    Object {
      "country_code": "DE",
      "country_name": null,
      "location": Object {
        "lat": "49.449922000000",
        "lon": "11.103470000000",
      },
    },
    Object {
      "country_code": "SK",
      "country_name": null,
      "location": Object {
        "lat": "48.143047000000",
        "lon": "17.124260000000",
      },
    },
    Object {
      "country_code": "SI",
      "country_name": null,
      "location": Object {
        "lat": "46.048183000000",
        "lon": "14.501456000000",
      },
    },
  ],
  "project_website": "http://www.cegc-project.eu/",
  "related_links": Array [
    Object {
      "label": "INEA",
      "url": "https://ec.europa.eu/inea/en/ten-t/ten-t-projects/projects-by-country/multi-country/2013-eu-92069-s",
    },
    Object {
      "label": "InvestEU",
      "url": "https://europa.eu/investeu/projects/central-european-green-corridors_en",
    },
  ],
  "results": Object {
    "available": null,
    "result": "Installation and operation of 115 fast-charging stations in 5 European countries,Development and implementation of electromobility and cross-border services for e-car users,Strategic planning for a European fast-charging network.Since the implementation of the Central European Green Corridors project, the European fast-charging network for electric vehicles has continued to grow. An additional 200 fast-charging stations – 180 in Italy and 20 in Austria – are developed. The charging networks in the various countries are compatible with each other. This gives even more citizens the chance to take advantage of cross-border electromobility.",
  },
  "timeframe": Object {
    "from": "2013-12-31T23:00:00.000Z",
    "to": "2014-12-31T23:00:00.000Z",
  },
  "title": "Central European Green Corridors",
}
`;

exports[`DG BUDG CSV transformer Project location information is correctly mapped 1`] = `
Object {
  "country_code": "AT",
  "country_name": null,
  "location": Object {
    "lat": "48.211312000000",
    "lon": "16.367315000000",
  },
}
`;

exports[`DG BUDG transformer handling incomplete or inconsistent data Certain fields should always be present after transformation 1`] = `
Object {
  "agriet": Object {
    "eu_contrib": NaN,
    "funding_area": null,
    "other_contrib": null,
    "private_fund": null,
    "public_fund": null,
    "total_cost": null,
  },
  "coordinators": Array [
    Object {
      "address": null,
      "country": null,
      "email": null,
      "name": "",
      "phone": null,
      "region": null,
      "type": null,
      "website": null,
    },
  ],
  "cover_image": undefined,
  "description": undefined,
  "ec_priorities": Array [
    "",
  ],
  "partners": Array [
    Object {
      "address": null,
      "country": null,
      "name": "",
      "region": null,
      "type": null,
      "website": null,
    },
  ],
  "programme_name": undefined,
  "project_id": undefined,
  "project_locations": Array [
    Object {
      "country_code": "",
      "country_name": null,
      "location": Object {
        "lat": "42.73806663",
        "lon": "23.40014509",
      },
    },
  ],
  "project_website": undefined,
  "related_links": Array [],
  "results": Object {
    "available": null,
    "result": undefined,
  },
  "timeframe": Object {
    "from": "2013-12-31T23:00:00.000Z",
    "to": "2014-12-31T23:00:00.000Z",
  },
  "title": "Bulgaria’s capital expands metro network",
}
`;
